# wedding

./: Cargo.toml
data/: guests.csv
sass/facade/abstracts/: _variables.scss
sass/facade/components/: _flex.scss  _font.scss  _text.scss
sass/wedding/abstracts/: _variables.scss
sass/wedding/base/: _base.scss
sass/wedding/components/: _fx.scss
sass/wedding/layout/: _header.scss  _index.scss  _nav.scss
sass/wedding/pages/: _dashboard.scss  _home.scss  _index.scss  _login.scss  _registry.scss  _rsvp.scss
src/: auth.rs  db.rs  guest.rs  main.rs  route.rs  user.rs
src/db/: guest.rs  mod.rs  record.rs
src/srv/: auth.rs  error.rs  mod.rs  route.rs
src/srv/route/: mod.rs  page.rs
templates/: about.html  base.html  dashboard.html  error.html  home.html  index.html  login.html  registry.html  rsvp.html  travel.html
templates/registry/: home.html  judaica.html
www/: style.css  style.css.map
www/assets/img/favicon/: about.txt
www/script/: days.js
