[package]
name = "wedding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
axum = { version = "0.6.1", features = ["form", "macros", "query"] }
axum-login = "0.4.1"
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
clap = { version = "4.0.32", features = ["derive", "env"] }
color-eyre = "0.6.2"
csv = "1.1.6"
indexmap = "1.9.2"
log = "0.4.17"
rand = { version = "0.8.5", features = ["min_const_gen"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
