[package]
name = "wedding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
axum = { version = "0.6.12", features = ["form", "macros", "query"] }
axum-login = "0.5.0"
axum-server = { version = "0.4.7", features = ["tls-rustls"] }
clap = { version = "4.2.1", features = ["derive", "env"] }
color-eyre = "0.6.2"
csv = "1.2.1"
indexmap = "1.9.3"
itertools = "0.10.5"
log = "0.4.17"
rand = { version = "0.8.5", features = ["min_const_gen"] }
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
