[package]
name = "wedding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = { version = "0.6.20", features = ["form", "macros", "query"] }
axum-login = "0.6.0"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
clap = { version = "4.4.7", features = ["derive", "env"] }
color-eyre = "0.6.2"
csv = "1.3.0"
indexmap = "2.1.0"
itertools = "0.11.0"
log = "0.4.20"
rand = { version = "0.8.5", features = ["min_const_gen"] }
serde = { version = "1.0.190", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
